<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/imgwallpapermonkey"
    tools:context=".TelaPlanetas">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="417dp"
        android:layout_height="123dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="488dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="75dp"
            android:layout_height="69dp"
            android:layout_marginStart="70dp"

            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao1"
            android:onClick="IrAbrolho"
            android:scaleType="fitCenter"
            android:src="@drawable/img_interro" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="75dp"
            android:layout_height="69dp"
            android:layout_marginStart="20dp"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao1"
            android:onClick="IrProfundezas"
            android:scaleType="fitCenter"

            android:src="@drawable/img_interro" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="75dp"
            android:layout_height="69dp"
            android:layout_marginStart="20dp"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao1"
            android:onClick="IrVale"
            android:scaleType="fitCenter"
            android:src="@drawable/img_interro" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="670dp"
        android:gravity="center_horizontal"
        android:text="@string/app_2p_titulo"
        android:textColor="@color/yellow"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="13dp"
        android:text="@string/app_2p_abrolho"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="13dp"
        android:text="@string/app_2p_vale"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="12dp"
        android:text="@string/app_2p_profundezas"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:backgroundTint="@color/transparente2"
        android:onClick="Voltar"
        android:text="@string/app_2p_voltar"
        android:textColor="@color/yellow"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.768" />

</androidx.constraintlayout.widget.ConstraintLayout>